<resources>
    <string name="app_name">CompraVenta</string>
    <string name="titulo">Título (*)</string>
    <string name="titulohint">Título</string>
    <string name="descripcion">Descripción(Opcional)</string>
    <string name="descripcionHint">Descripción...</string>
    <string name="correo_de_contacto">Correo de contacto (*)</string>
    <string name="correo_de_contactohint">Correo de Electronico...</string>
    <string name="precio">Precio (*)</string>
    <string name="preciohint">Precio...</string>
    <string name="ofrecer_descuento_de_envio">Ofrecer descuento de envio</string>
    <string name="categoryViewHolder">Categoria (*)</string>
    <string name="retiro_en_persona">Retiro en persona</string>
    <string name="direcci_n_de_env_o">Dirección de retiro</string>
    <string name="direcci_n_de_env_ohint">Dirección...</string>
    <string name="sada">*Por favor seleccione un porcentaje mayor a 0 o quite la opcion de ofrecer descuento de envio.*</string>
    <string name="EULA">Acepto los términos y condiciones</string>
    <string name="publicar">Publicar</string>
    <string name="cero">0</string>
    <string name="error_msj">Formulario incompleto, complete los datos obligatorios</string>
    <string name="error_acc">Volver</string>
    <string name="val_ok">El artículo se publica correctamente</string>
    <string name="val_sad">Faltan datos importantes</string>
    <string name="boton_cat">Selecciona la categoría</string>
    <string name="car_adv">*Usted no seleciono una categoría*</string>
    <string name="toast_selección">Usted seleciono una categoría</string>
    <string name="seleccion">Selección: Ninguna</string>
    <string name="regex_tplano">([A-Z]|[a-z]|[,.]|[\\s\\n]|[0-9])+$</string>
    <string name="regex_num">([0-9]+([.][0-9]*)?)+$</string>
    <string name="regex_email">(^[a-zA-Z0-9_.]+[@]{1}[a-z0-9]{3,}[\\.][a-z]+$)</string>
</resources>